--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,10 +1,18 @@
-#server.port=9098
+server.port=9098
 banner.location=banner.txt
-spring.jpa.database=POSTGRESQL
+#spring.jpa.database=POSTGRESQL
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.driver-class.name=org.postgresql.Driver
+#spring.datasource.driver-class.name=org.mysql.Driver
+#spring.datasource.url=jdbc:mysql://localhost/restdemo
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-
-spring.datasource.driver-class.name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/restdemo
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasoruce.url=jdbc:mysql://localhost:3306/restdemo
+spring.datasource.username=root
+spring.datasource.password=root
