--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -9,10 +9,13 @@ banner.location=banner.txt
 #spring.datasource.username=root
 #spring.datasource.password=root
 
-spring.jpa.database=MYSQL
+#spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasoruce.url=jdbc:mysql://localhost:3306/restdemo
+spring.datasource.url=jdbc:mysql://localhost:3308/restdemo
 spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.password=""
+
+
+
