Relacion de Tabla detalle

--- a/mediapp-backend/pom.xml
+++ b/mediapp-backend/pom.xml
@@ -51,6 +51,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-hateoas</artifactId>
 		</dependency>
+		
+		
+		<!-- JACKSON - FECHAS(DESEREALIZAR) -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
 
 		<!-- WEB -->
 		<dependency>
